tests/core/snapshots/body-batching-cases.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 1,
          "title": "user-1",
          "user": {
            "id": 1,
            "name": "user-1"
          }
        },
        {
          "id": 2,
          "title": "user-2",
          "user": {
            "id": 2,
            "name": "user-2"
          }
        }
      ]
    }
  }
}
