tests/core/snapshots/body-batching-cases.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": [
        {
          "a": 11,
          "b": 12,
          "bar": {
            "a": 11,
            "b": 12
          }
        },
        {
          "a": 21,
          "b": 22,
          "bar": {
            "a": 21,
            "b": 22
          }
        }
      ]
    }
  }
}
