tests/core/snapshots/body-batching.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  users: [User]
}

type User {
  id: Int!
  name: String!
  posts: [Post]
}

schema {
  query: Query
}
