tests/core/snapshots/body-batching.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000, queryValidation: false)
  @upstream(batch: {delay: 1, headers: [], maxSize: 1000}, httpCache: 42) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  id: Int!
  name: String!
  posts: [Post]
    @http(
      url: "https://jsonplaceholder.typicode.com/posts"
      body: "{\"userId\": \"{{.value.id}}\", \"title\": \"foo\", \"body\": \"bar\"}"
      batchKey: ["userId"]
      bodyKey: ["userId"]
      method: "POST"
    )
}
