tests/core/snapshots/cache-control.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "cache-control": "max-age=3600",
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u2": {
        "id": 2
      }
    }
  }
}
