tests/core/snapshots/cache-control.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "cache-control": "no-cache",
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u4": {
        "id": 4
      }
    }
  }
}
