tests/core/snapshots/cache-control.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "cache-control": "no-cache, private",
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "u3": {
        "id": 3
      },
      "u4": {
        "id": 4
      }
    }
  }
}
